--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="panda.png" alt="Uma marcação até eu tirar uma foto minha">
     <p>Meu nome é Vinícius, eu sou brasileiro, tenho 28 anos e resido na cidade de São José dos Campos - SP. Atualmente estou estudando para me tornar uma pessoa programadora na Trybe!</p>
     <ul>
-        <li><strong>Criativo</strong>: Sou muito criativo. Tenho o hábito de analisar as coisas imaginando como elas surgiram, como elas atendem a uma necessidade específica, e imaginar se elas poderiam atender melhor essa necessidade se fossem de outra forma, ou se elas poderiam atender a outras necessidades. Tambeḿ gosto muito de criar histórias, pensar em projetos (que vou desenvolver quando me tornar uma pessoa desenvovledora) e criar coisas com a minha impressora 3D!</li>
+        <li><strong>Criativo</strong>: Sou muito criativo. Tenho o hábito de <em>analisar</em> as coisas imaginando <em>como elas surgiram</em>, como elas atendem a uma necessidade específica, e imaginar se elas poderiam atender melhor essa necessidade se fossem de outra forma, ou se elas poderiam atender a outras necessidades. Tambeḿ gosto muito de criar histórias, pensar em projetos (que vou desenvolver quando me tornar uma pessoa desenvovledora) e criar coisas com a minha impressora 3D!</li>
         <li>Comunicativo: Gosto mutio de conversar sobre qualquer assunto. Gosto de conhecer pessoas novas, conhecer outras realidades e as histórias de outras pessoas. </li>
         <li>Responsável</li>
     </ul>
